--- a/src/app/maps/pages/full-screen-page/full-screen-page.component.html
+++ b/src/app/maps/pages/full-screen-page/full-screen-page.component.html
@@ -1,1 +1,7 @@
-<p>full-screen-page works!</p>
+<div id="map" #map>
+  <div class="map-loading">
+    <div class="spinner-border text-primary" role="status">
+      <span class="sr-only"></span>
+    </div>
+  </div>
+</div>
