--- a/src/app/maps/pages/full-screen-page/full-screen-page.component.css
+++ b/src/app/maps/pages/full-screen-page/full-screen-page.component.css
@@ -1,5 +1,11 @@
 #map{
   width: 100vw;
   height: 100vh;
-  background-color: red;
+
+  & .map-loading{
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 100%;
+  }
 }
