--- a/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
+++ b/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
@@ -1,1 +1,22 @@
-<p>zoom-range-page works!</p>
+<div id="map" #map>
+  <div class="map-loading">
+    <div class="spinner-border text-primary" role="status">
+      <span class="sr-only"></span>
+    </div>
+  </div>
+</div>
+
+<div class="floating-range p-2">
+  <div class="floating-content">
+    <button type="button" class="btn btn-primary" (click)="zoomOut()">-</button>
+    <input type="range" class="form-range px-2" min="2" max="18" [value]="zoom" #zoomInput
+      (input)="zoomChange(zoomInput.value)">
+    <button type="button" class="btn btn-primary" (click)="zoomIn()">+</button>
+  </div>
+
+  <span class="form-label">
+    Zoom: {{ zoom | number: '2.2-2'}}
+    <br>
+    Lng,Lat {{currentCenter}}
+  </span>
+</div>
