--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,21 @@
-<p>markers-page works!</p>
+<div id="map" #map>
+  <div class="map-loading">
+    <div class="spinner-border text-primary" role="status">
+      <span class="sr-only"></span>
+    </div>
+  </div>
+</div>
+
+
+<ul class="list-group">
+  <li *ngFor="let colorMarker of markers; let i = index" [ngStyle]="{ backgroundColor:colorMarker.color}"
+    (dblclick)="deleteMarker(i)" (click)="flyTo( colorMarker.marker)" class="list-group-item">
+    Marker {{ i + 1 }}
+  </li>
+</ul>
+
+
+
+<button (click)="createMarker()" class="btn btn-primary">
+  + Agregar marcador
+</button>
